# sagemaker_mlops_demo

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: cleanup.yml  model-deploy.yml  sagemaker-pipeline.yml
config/: config.yaml
docs/: CICD_SETUP.md
notebooks/: quickstart.ipynb
pipelines/: pipeline.py
scripts/: cleanup.py  deploy.py  download_data.py  load_env.py  test_endpoint.py  upload_to_s3.py
src/: evaluate.py  inference.py  preprocess.py  train.py
tests/: test_model.py
