[project]
name = "sagemaker-mlops-demo"
version = "0.1.0"
description = "SageMaker MLOps Demo with scikit-learn"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.28.0",
    "joblib>=1.3.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "sagemaker>=3.0",
    "sagemaker-mlops==1.3.1",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
]

[dependency-groups]
dev = ["pytest>=7.4.0", "black>=23.9", "flake8>=6.1.0"]