[project]
name = "sagemaker-mlops-demo"
version = "0.1.0"
description = "SageMaker MLOps Demo with scikit-learn"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "boto3>=1.34.0",              # Updated for V3 compatibility
    "joblib>=1.3.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    # SageMaker SDK v2 (stable pipeline API)
    "sagemaker>=2.200.0,<3.0.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
]

[dependency-groups]
dev = ["pytest>=7.4.0", "black>=23.9", "flake8>=6.1.0"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"